Fix DatePicker overflow
The DatePicker was overflowing below the screen bottom. This was causing
the entier UI to scroll sometimes.

Also updated classNames in the DatePicker.

--- a/src/components/DatePicker/DatePicker.css
+++ b/src/components/DatePicker/DatePicker.css
@@ -8,10 +8,9 @@
     left: 0;
     bottom: 0;
     width: 200px;
-    height: 50px;
 }
 
-.DatePicker > div {
+.DatePicker__chooser {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -19,9 +18,10 @@
     padding: 5px;
 }
 
-.DatePicker > div > div {
+.DatePicker__arrow {
     cursor: pointer;
     height: 8px;
+    overflow-y: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -30,12 +30,12 @@
     color: rgba(255, 255, 255, 0.2);
 }
 
-.DatePicker > div > div:hover {
+.DatePicker__arrow:hover {
     background-color: rgba(0, 0, 0, 0.5);
     color: white;
 }
 
-.DatePicker input {
+.DatePicker__input {
     width: 100%;
     text-align: center;
     margin: 5px;
